# YoloWebapp

./: README.md  infer.py  resnet_training.py  setup.cfg  track.py  webapp.py
static/: style.css
templates/: index.html  infer.html  infer1.html
