[metadata]
name = visionapp
version = 0.0.1
author = rohin
author_email = rohinr7@outlook.com
description = A Auto app for resnet training and yolo inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/visionarchi/YoloWebapp
project_urls =
    Bug Tracker = https://github.com/visionarchi/YoloWebapp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
